build out more routes and add pagination
