# app/routes/todos.routes.go
@@ -1,13 +1,13 @@
 package routes
 
-import "github.com/gofiber/fiber/v2"
+import (
+	"tkspectro/vefeast/app/services"
+	"tkspectro/vefeast/utils/middleware"
+
+	"github.com/gofiber/fiber/v2"
+)
 
 func RegisterRoutesTodos(router fiber.Router) {
-	router.Get("/", func(c *fiber.Ctx) error {
-		return c.SendString("/todos")
-	})
-
-	router.Get("/:id", func(c *fiber.Ctx) error {
-		return c.SendString("/todos/:id")
-	})
+	router.Get("/", middleware.Protected, middleware.Pagination, services.GetTodos)
+	router.Get("/:id", middleware.Protected, services.GetTodo)
 }
